--- a/styles.css
+++ b/styles.css
@@ -1,53 +1,67 @@
 body{
     background-color:hsl(229, 57%, 11%) ;
-    /* color: white; */
-      background-image: url("images/bg-desktop.png");
+    background-image: url("images/bg-desktop.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+     background-position: bottom-center;
+
 }
 
 .card-left{
     background-color:  hsl(228, 56%, 26%);
-    border-top-right-radius: 40px; 
+    border-top-right-radius: 80px; 
     border-bottom-left-radius: 4px;
     border-top-left-radius: 4px;
     border-bottom-right-radius: 4px;
+    
+    width:230px;
 }
 
-.icon-bo{
+/* .icon-bo{
     background-color: hsl(229, 57%, 11%);
-}
+} */
 
 .card-right{
     background-color:  hsl(228, 56%, 26%);
+     border-radius: 12px;
+
+
+     width: 380px;                          
+    top: 25px;   
 }
 
 p{
-     color: hsl(229, 7%, 55%)
+     color: hsl(229, 7%, 55%);
+       
+     margin-bottom: 0.5rem;                
+
      
 }
 .progress{
-    background-color:hsl(229, 57%, 11%)
+    background-color:hsl(229, 57%, 11%);
+    height:14px;
 }
 .progress-bar{
 background: linear-gradient(to right, hsl(6, 100%, 80%), hsl(335, 100%, 65%));
- border: 2px solid hsl(229, 57%, 11%)
+  border: 2px solid hsl(229, 57%, 11%) 
 }
-/* 
+
  .whiteknob{
-      position: absolute;
-      top: 50%;
-      right: 0;
-      transform: translate(50%, -50%);
+    left: 73%;
+      transform: translate(-50%, -50%);
       width: 14px;
       height: 14px;
       background: white;
       border-radius: 50%;
-    } */
-
+ 
+ }
 
   .speech-bubble {
   position: relative;
-  margin-bottom: 10px;
-  color: #000 !important;
+  /* margin-bottom: 10px;
+  color: #000 !important; */
+  /* top: -45px; */
+  /* right: 50px; */
     border-bottom-right-radius: 0 !important;  /*  added — makes bottom-right corner square */
 
 }
@@ -58,9 +72,9 @@ background: linear-gradient(to right, hsl(6, 100%, 80%), hsl(335, 100%, 65%));
   content: "";
   position: absolute;
   bottom: -12px;                     /* slightly below the bubble */
-  right: 0;                          /*flush with right edge */
-  width: 0;
-  height: 0;
+  right:20px;                          /*flush with right edge */
+  /* width: 0;
+  height: 0; */
   border-top: 14px solid #f8f9fa;    /* main color (bubble color) */
   border-left: 14px solid transparent; /* wider base to make it right-handed */
 }
