--- a/styles.css
+++ b/styles.css
@@ -1,80 +1,85 @@
-body{
-    background-color:hsl(229, 57%, 11%) ;
+@import url('https://fonts.googleapis.com/css?family=Raleway:300,400,700&display=swap');
+
+body {
+    background-color: hsl(229, 57%, 11%);
     background-image: url("images/bg-desktop.png");
     background-size: cover;
     background-repeat: no-repeat;
-     background-position: bottom-center;
-
+    background-position: bottom-center;
+    font-family: "Raleway", sans-serif !important;
 }
 
-.card-left{
-    background-color:  hsl(228, 56%, 26%);
-    border-top-right-radius: 80px; 
+.card-left {
+    background-color: hsl(228, 56%, 26%);
+    border-top-right-radius: 80px;
     border-bottom-left-radius: 4px;
     border-top-left-radius: 4px;
     border-bottom-right-radius: 4px;
-    
-    width:230px;
+    width: 230px;
+    height: 100%;
 }
 
-/* .icon-bo{
+.card-right {
+    background-color: hsl(228, 56%, 26%);
+    border-radius: 12px;
+    width: 380px;
+    height: 100%;
+}
+
+p {
+    color: hsl(229, 7%, 55%);
+    margin-bottom: 0.5rem;
+    font-size: 0.75rem;
+}
+
+.progress {
     background-color: hsl(229, 57%, 11%);
-} */
-
-.card-right{
-    background-color:  hsl(228, 56%, 26%);
-     border-radius: 12px;
-
-
-     width: 380px;                          
-    top: 25px;   
+    height: 14px;
 }
 
-p{
-     color: hsl(229, 7%, 55%);
-       
-     margin-bottom: 0.5rem;                
-
-     
-}
-.progress{
-    background-color:hsl(229, 57%, 11%);
-    height:14px;
-}
-.progress-bar{
-background: linear-gradient(to right, hsl(6, 100%, 80%), hsl(335, 100%, 65%));
-  border: 2px solid hsl(229, 57%, 11%) 
+.progress-bar {
+    background: linear-gradient(to right, hsl(6, 100%, 80%), hsl(335, 100%, 65%));
+    border: 2px solid hsl(229, 57%, 11%)
 }
 
- .whiteknob{
+.whiteknob {
     left: 73%;
-      transform: translate(-50%, -50%);
-      width: 14px;
-      height: 14px;
-      background: white;
-      border-radius: 50%;
- 
- }
-
-  .speech-bubble {
-  position: relative;
-  /* margin-bottom: 10px;
-  color: #000 !important; */
-  /* top: -45px; */
-  /* right: 50px; */
-    border-bottom-right-radius: 0 !important;  /*  added — makes bottom-right corner square */
-
+    transform: translate(-50%, -50%);
+    width: 14px;
+    height: 14px;
+    background: white;
+    border-radius: 50%;
 }
 
+.speech-bubble {
+    position: relative;
+    border-bottom-right-radius: 0 !important;   /* added — makes bottom-right corner square */
 
+}
 
 .speech-bubble::after {
-  content: "";
-  position: absolute;
-  bottom: -12px;                     /* slightly below the bubble */
-  right:20px;                          /*flush with right edge */
-  /* width: 0;
-  height: 0; */
-  border-top: 14px solid #f8f9fa;    /* main color (bubble color) */
-  border-left: 14px solid transparent; /* wider base to make it right-handed */
+    content: "";
+    position: absolute;
+    bottom: -12px;  /* slightly below the bubble */
+    right: 20px;   /*flush with right edge */
+    border-top: 14px solid #f8f9fa;   /* main color (bubble color) */
+    border-left: 14px solid transparent;   /* wider base to make it right-handed */
 }
+
+.gb {
+    font-size: 0.50rem;
+    margin-bottom: 10px;
+}
+
+  @media (max-width: 374px) {
+      body .d-flex {
+          align-items: center !important;
+      }
+
+      .card-left,
+      .card-right {
+          flex-direction: column !important;
+          align-items: center !important;
+          gap: 20px !important;
+      }
+  }
